--- a/root/usr/local/tengine/conf/nginx.conf
+++ b/root/usr/local/tengine/conf/nginx.conf
@@ -134,6 +134,7 @@ http {
 				rewrite ^/qiyu$ /forum.php?mod=forumdisplay&fid=395 last;
 				rewrite ^/pet$ /forum.php?mod=forumdisplay&fid=283 last;
 				rewrite ^/book$ /forum.php?mod=forumdisplay&fid=390 last;
+				rewrite ^/story$ /forum.php?mod=forumdisplay&fid=390 last;
 				rewrite ^/publish$ /portal.php?mod=portalcp&ac=article&catid=1&op=simple last;
 
 				rewrite ^/bbs$ /forum-2-1.html last;
@@ -145,15 +146,13 @@ http {
 				rewrite ^/about$ /forum.php?mod=forumdisplay&fid=392 last;
 				rewrite ^/test$ /forum.php?mod=forumdisplay&fid=55 last;
 				rewrite ^/testpage$ /portal.php?mod=topic&topicid=60 last;
+				rewrite ^/video$ /plugin.php?id=smart_video last;
+				rewrite ^/snow$ /forum.php?mod=forumdisplay&fid=321&filter=typeid&typeid=318&orderby=lastedit last;
+				rewrite ^/group$ /group.php last;
 
 			#iframe header & footer for yylmacro
 				rewrite ^/iframe/header$ /portal.php?mod=topic&topicid=62  last;
 				rewrite ^/iframe/footer$ /portal.php?mod=topic&topicid=63  last;
-
-			#old channel
-				rewrite ^/video$ /plugin.php?id=smart_video last;
-				rewrite ^/snow$ /forum.php?mod=forumdisplay&fid=321&filter=typeid&typeid=318&orderby=lastedit last;
-				rewrite ^/group$ /group.php last;
 
 			#with no navpage
 				rewrite ^/fb$ /portal.php?mod=topic&topicid=74 last; 
@@ -186,6 +185,7 @@ http {
 				rewrite ^/os$ /home.php last;
 				rewrite ^/os_m$ /portal.php?mod=topic&topicid=103&mobile=no last;
 				rewrite ^/gift$ /portal.php?mod=topic&topicid=107 last;
+				rewrite ^/sitemap$ /portal.php?mod=topic&topicid=110 last;
 		}
 			
 		location ~ page.php$ {
