--- a/root/usr/local/tengine/conf/nginx.conf
+++ b/root/usr/local/tengine/conf/nginx.conf
@@ -135,10 +135,9 @@ http {
 				rewrite ^/pet$ /forum.php?mod=forumdisplay&fid=283 last;
 				rewrite ^/book$ /forum.php?mod=forumdisplay&fid=390 last;
 				rewrite ^/story$ /forum.php?mod=forumdisplay&fid=390 last;
-				rewrite ^/publish$ /portal.php?mod=portalcp&ac=article&catid=1&op=simple last;
-
+				
 				rewrite ^/bbs$ /forum-2-1.html last;
-				rewrite ^/ask$ /forum.php?mod=forumdisplay&fid=2 last;
+				rewrite ^/ask$ /forum.php?mod=post&action=newthread&fid=2 last;
 				rewrite ^/faq$ /misc.php?mod=faq last;
 				rewrite ^/feedback$ /forum.php?mod=post&action=newthread&fid=365 last;
 				rewrite ^/feedbak$ /forum.php?mod=post&action=newthread&fid=365 last;
@@ -149,9 +148,13 @@ http {
 				rewrite ^/video$ /plugin.php?id=smart_video last;
 				rewrite ^/snow$ /forum.php?mod=forumdisplay&fid=321&filter=typeid&typeid=318&orderby=lastedit last;
 				rewrite ^/group$ /group.php last;
-				rewrite ^/sitemap$ /portal.php?mod=topic&topicid=110 last;
 
-			#iframe header & footer for yylmacro
+			#system page
+				rewrite ^/sitemap$ /portal.php?mod=topic&topicid=110 last;
+				rewrite ^/search$ /portal.php?mod=topic&topicid=111 last;
+				rewrite ^/os$ /portal.php?mod=topic&topicid=112 last;
+				rewrite ^/publish$ /portal.php?mod=portalcp&ac=article&catid=1&op=simple last;
+
 				rewrite ^/iframe/header$ /portal.php?mod=topic&topicid=62  last;
 				rewrite ^/iframe/footer$ /portal.php?mod=topic&topicid=63  last;
 
@@ -164,7 +167,6 @@ http {
 				rewrite ^/vip_m$ /portal.php?mod=topic&topicid=89&mobile=no last;
 				rewrite ^/buy$ /home.php?mod=spacecp&ac=credit&op=buy last;
 				rewrite ^/buy_m$ /portal.php?mod=topic&topicid=90&mobile=no last;
-				rewrite ^/os$ /home.php last;
 				rewrite ^/os_m$ /portal.php?mod=topic&topicid=103&mobile=no last;
 				rewrite ^/gift$ /portal.php?mod=topic&topicid=107 last;
 
