--- a/root/usr/local/tengine/conf/nginx.conf
+++ b/root/usr/local/tengine/conf/nginx.conf
@@ -151,7 +151,8 @@ http {
 
 			#system page
 				rewrite ^/sitemap$ /portal.php?mod=topic&topicid=110 last;
-				rewrite ^/search$ /portal.php?mod=topic&topicid=111 last;
+				#rewrite ^/search$ /portal.php?mod=topic&topicid=111 last;
+				rewrite ^/search$ http://search.jx3pve.com/cse/search?s=16227720870024914123 last;
 				rewrite ^/os$ /portal.php?mod=topic&topicid=112 last;
 				rewrite ^/publish$ /portal.php?mod=portalcp&ac=article&catid=1&op=simple last;
 
