推送头条与门户样式独立

--- a/root/usr/local/tengine/conf/nginx.conf
+++ b/root/usr/local/tengine/conf/nginx.conf
@@ -155,6 +155,7 @@ http {
 				rewrite ^/search$ http://search.jx3pve.com/cse/search?s=16227720870024914123 last;
 				rewrite ^/os$ /portal.php?mod=topic&topicid=112 last;
 				rewrite ^/publish$ /portal.php?mod=portalcp&ac=article&catid=1&op=simple last;
+				rewrite ^/push$ /portal.php?mod=portalcp&ac=article&catid=1&op=simple last;
 
 				rewrite ^/iframe/header$ /portal.php?mod=topic&topicid=62  last;
 				rewrite ^/iframe/footer$ /portal.php?mod=topic&topicid=63  last;
