--- a/root/usr/local/tengine/conf/nginx.conf
+++ b/root/usr/local/tengine/conf/nginx.conf
@@ -135,32 +135,34 @@ http {
 				rewrite ^/pet$ /forum.php?mod=forumdisplay&fid=283 last;
 				rewrite ^/book$ /forum.php?mod=forumdisplay&fid=390 last;
 				rewrite ^/story$ /forum.php?mod=forumdisplay&fid=390 last;
-				
-				rewrite ^/bbs$ /forum-2-1.html last;
-				rewrite ^/ask$ /forum.php?mod=post&action=newthread&fid=2 last;
-				rewrite ^/faq$ /misc.php?mod=faq last;
-				rewrite ^/feedback$ /forum.php?mod=post&action=newthread&fid=365 last;
-				rewrite ^/feedbak$ /forum.php?mod=post&action=newthread&fid=365 last;
-				rewrite ^/contact$ /portal.php?mod=topic&topicid=65 last;
-				rewrite ^/about$ /forum.php?mod=forumdisplay&fid=392 last;
-				rewrite ^/test$ /forum.php?mod=forumdisplay&fid=55 last;
-				rewrite ^/testpage$ /portal.php?mod=topic&topicid=60 last;
+				rewrite ^/bbs$ /forum.php?mod=forumdisplay&fid=2 last;
 				rewrite ^/video$ /plugin.php?id=smart_video last;
 				rewrite ^/snow$ /forum.php?mod=forumdisplay&fid=321&filter=typeid&typeid=318&orderby=lastedit last;
 				rewrite ^/group$ /group.php last;
 
 			#system page
+				rewrite ^/test$ /forum.php?mod=forumdisplay&fid=55 last;
+				rewrite ^/testpage$ /portal.php?mod=topic&topicid=60 last;
+
 				rewrite ^/sitemap$ /portal.php?mod=topic&topicid=110 last;
 				#rewrite ^/search$ /portal.php?mod=topic&topicid=111 last;
 				rewrite ^/search$ http://search.jx3pve.com/cse/search?s=16227720870024914123 last;
-				rewrite ^/os$ /portal.php?mod=topic&topicid=112 last;
 				rewrite ^/publish$ /portal.php?mod=portalcp&ac=article&catid=1&op=simple last;
 				rewrite ^/push$ /portal.php?mod=portalcp&ac=article&catid=1&op=simple last;
+
+				rewrite ^/ask$ /forum.php?mod=post&action=newthread&fid=2 last;
+				rewrite ^/faq$ /misc.php?mod=faq last;
+				rewrite ^/feedback$ /forum.php?mod=post&action=newthread&fid=365 last;
+				rewrite ^/feedbak$ /forum.php?mod=post&action=newthread&fid=365 last;
+
+				rewrite ^/about$ /portal.php?mod=topic&topicid=116 last;
+				rewrite ^/contact$ /portal.php?mod=topic&topicid=65 last;
 
 				rewrite ^/iframe/header$ /portal.php?mod=topic&topicid=62  last;
 				rewrite ^/iframe/footer$ /portal.php?mod=topic&topicid=63  last;
 
 			#user os page
+				rewrite ^/os$ /portal.php?mod=topic&topicid=112 last;
 				rewrite ^/login$ /member.php?mod=logging&action=login last;
 				rewrite ^/login_m$ /member.php?mod=logging&action=login&mobile=2 last;
 				rewrite ^/register$ /member.php?mod=register last;
