单页适配与移动端适配规范分离

--- a/root/usr/local/tengine/conf/nginx.conf
+++ b/root/usr/local/tengine/conf/nginx.conf
@@ -104,7 +104,7 @@ http {
 # JX3PVE
     server {
         listen       80;
-        server_name www.jx3pve.com static.jx3pve.com css.jx3pve.com img.jx3pve.com js.jx3pve.com app.jx3pve.com test.jx3pve.com;
+        server_name www.jx3pve.com static.jx3pve.com css.jx3pve.com img.jx3pve.com js.jx3pve.com app.jx3pve.com test.jx3pve.com wiki.jx3pve.com;
         root         /web/www/yylmacro;
 		#error_page 404 500 502 http://www.jx3pve.com/sys/error.html;
 		location / {
