宏库栏目上新

--- a/root/usr/local/tengine/conf/nginx.conf
+++ b/root/usr/local/tengine/conf/nginx.conf
@@ -124,10 +124,10 @@ http {
 				rewrite ^([^\.]*)/([a-z]+[a-z0-9_]*)-([a-z0-9_\-]+)\.html$ $1/plugin.php?id=$2:$3 last;
 			
 			#channel quick link
-				rewrite ^/macro$ /forum.php?mod=forumdisplay&fid=294 last;
-				rewrite ^/tool$ /forum.php?mod=forumdisplay&fid=321 last;
-				rewrite ^/role$ /forum.php?mod=forumdisplay&fid=384 last;
-				rewrite ^/fam$ /forum.php?mod=forumdisplay&fid=369 last;
+				rewrite ^/macro$ /forum.php?mod=forumdisplay&fid=294&sortid=18&orderby=lastedit last;
+				rewrite ^/tool$ /forum.php?mod=forumdisplay&fid=321&orderby=lastedit last;
+				rewrite ^/role$ /forum.php?mod=forumdisplay&fid=384&orderby=lastedit last;
+				rewrite ^/fam$ /forum.php?mod=forumdisplay&fid=369&orderby=lastedit last;
 				rewrite ^/raid$ /forum.php?mod=forumdisplay&fid=67 last;
 				rewrite ^/face$ /forum.php?mod=forumdisplay&fid=92 last;
 				rewrite ^/biz$ /forum.php?mod=forumdisplay&fid=394 last;
@@ -135,7 +135,7 @@ http {
 				rewrite ^/pet$ /forum.php?mod=forumdisplay&fid=283 last;
 				rewrite ^/book$ /forum.php?mod=forumdisplay&fid=390 last;
 				rewrite ^/story$ /forum.php?mod=forumdisplay&fid=390 last;
-				rewrite ^/bbs$ /forum.php?mod=forumdisplay&fid=2 last;
+				rewrite ^/bbs$ /forum.php?mod=forumdisplay&fid=2&orderby=lastedit last;
 				rewrite ^/video$ /plugin.php?id=smart_video last;
 				rewrite ^/snow$ /forum.php?mod=forumdisplay&fid=321&filter=typeid&typeid=318&orderby=lastedit last;
 				rewrite ^/group$ /group.php last;
