--- a/root/usr/local/tengine/conf/nginx.conf
+++ b/root/usr/local/tengine/conf/nginx.conf
@@ -162,17 +162,17 @@ http {
 				rewrite ^/iframe/footer$ /portal.php?mod=topic&topicid=63  last;
 
 			#user os page
-				rewrite ^/os$ /portal.php?mod=topic&topicid=112 last;
 				rewrite ^/login$ /member.php?mod=logging&action=login last;
-				rewrite ^/login_m$ /member.php?mod=logging&action=login&mobile=2 last;
+				rewrite ^/login_m$ /member.php?mod=logging&action=login last;
 				rewrite ^/register$ /member.php?mod=register last;
-				rewrite ^/register_m$ /member.php?mod=register&mobile=2 last;
+				rewrite ^/register_m$ /member.php?mod=register last;
+				rewrite ^/os$ /home.php last;
+				rewrite ^/os_m$ /home.php last;
 				rewrite ^/vip$ /home.php?mod=spacecp&ac=usergroup&do=list last;
-				rewrite ^/vip_m$ /portal.php?mod=topic&topicid=89&mobile=no last;
+				rewrite ^/vip_m$ /home.php?mod=spacecp&ac=usergroup&do=list last;
 				rewrite ^/buy$ /home.php?mod=spacecp&ac=credit&op=buy last;
-				rewrite ^/buy_m$ /portal.php?mod=topic&topicid=90&mobile=no last;
-				rewrite ^/os_m$ /portal.php?mod=topic&topicid=103&mobile=no last;
-				rewrite ^/gift$ /portal.php?mod=topic&topicid=107 last;
+				rewrite ^/buy_m$ /home.php?mod=spacecp&ac=credit&op=buy last;
+				rewrite ^/gift$ /portal.php?mod=topic&topicid=118 last;
 
 			#with no navpage
 				rewrite ^/fb$ /portal.php?mod=topic&topicid=74 last; 
