--- a/root/usr/local/tengine/conf/nginx.conf
+++ b/root/usr/local/tengine/conf/nginx.conf
@@ -128,17 +128,24 @@ http {
 				rewrite ^/tool$ /forum.php?mod=forumdisplay&fid=321&orderby=lastedit last;
 				rewrite ^/role$ /forum.php?mod=forumdisplay&fid=384&orderby=lastedit last;
 				rewrite ^/fam$ /forum.php?mod=forumdisplay&fid=369&orderby=lastedit last;
-				rewrite ^/raid$ /forum.php?mod=forumdisplay&fid=67 last;
 				rewrite ^/face$ /forum.php?mod=forumdisplay&fid=92 last;
-				rewrite ^/biz$ /forum.php?mod=forumdisplay&fid=394 last;
 				rewrite ^/qiyu$ /forum.php?mod=forumdisplay&fid=395 last;
 				rewrite ^/pet$ /forum.php?mod=forumdisplay&fid=283 last;
 				rewrite ^/book$ /forum.php?mod=forumdisplay&fid=390 last;
 				rewrite ^/story$ /forum.php?mod=forumdisplay&fid=390 last;
 				rewrite ^/bbs$ /forum.php?mod=forumdisplay&fid=2&orderby=lastedit last;
 				rewrite ^/video$ /plugin.php?id=smart_video last;
-				rewrite ^/snow$ /forum.php?mod=forumdisplay&fid=321&filter=typeid&typeid=318&orderby=lastedit last;
 				rewrite ^/group$ /group.php last;
+
+				rewrite ^/snow$ /forum.php?mod=forumdisplay&fid=321&filter=typeid&typeid=318&orderby=lastedit last;
+
+				rewrite ^/raid$ /forum.php?mod=forumdisplay&fid=67 last;
+				rewrite ^/team$ /forum.php?mod=forumdisplay&fid=67 last;
+				rewrite ^/member$ /forum.php?mod=forumdisplay&fid=407 last;
+				rewrite ^/biz$ /forum.php?mod=forumdisplay&fid=394 last;
+				rewrite ^/biz-sale$ /forum.php?mod=forumdisplay&fid=394 last;
+				rewrite ^/biz-buy$ /forum.php?mod=forumdisplay&fid=404 last;
+				rewrite ^/love$ /forum.php?mod=forumdisplay&fid=406 last;
 
 			#system page
 				rewrite ^/test$ /forum.php?mod=forumdisplay&fid=55 last;
