首页&小雪读条

--- a/root/usr/local/tengine/conf/nginx.conf
+++ b/root/usr/local/tengine/conf/nginx.conf
@@ -137,7 +137,8 @@ http {
 				rewrite ^/video$ /plugin.php?id=smart_video last;
 				rewrite ^/group$ /group.php last;
 
-				rewrite ^/snow$ /forum.php?mod=forumdisplay&fid=321&filter=typeid&typeid=318&orderby=lastedit last;
+				rewrite ^/snow$ /forum.php?mod=forumdisplay&fid=79&filter=typeid&typeid=173&orderby=lastedit&sortid=8 last;
+				rewrite ^/skin$ /forum.php?mod=forumdisplay&fid=79&filter=typeid&typeid=173&orderby=lastedit&sortid=8 last;
 
 				rewrite ^/raid$ /forum.php?mod=forumdisplay&fid=67 last;
 				rewrite ^/team$ /forum.php?mod=forumdisplay&fid=67 last;
