--- a/root/usr/local/tengine/conf/nginx.conf
+++ b/root/usr/local/tengine/conf/nginx.conf
@@ -129,6 +129,7 @@ http {
 				rewrite ^/role$ /forum.php?mod=forumdisplay&fid=384&orderby=lastedit last;
 				rewrite ^/fam$ /forum.php?mod=forumdisplay&fid=369&orderby=lastedit last;
 				rewrite ^/face$ /forum.php?mod=forumdisplay&fid=92 last;
+				rewrite ^/wall$ /forum.php?mod=forumdisplay&fid=408 last;
 				rewrite ^/qiyu$ /forum.php?mod=forumdisplay&fid=395 last;
 				rewrite ^/pet$ /forum.php?mod=forumdisplay&fid=283 last;
 				rewrite ^/book$ /forum.php?mod=forumdisplay&fid=390 last;
