Signed-off-by: unknown <17229398@qq.com>

--- a/root/usr/local/tengine/conf/nginx.conf
+++ b/root/usr/local/tengine/conf/nginx.conf
@@ -109,7 +109,7 @@ http {
 		#error_page 404 500 502 http://www.jx3pve.com/sys/error.html;
 		location / {
 		
-			index portal.php index.php dz.php forum.php index.html index.htm  ;
+			index index.html portal.php index.php dz.php forum.php index.html index.htm  ;
 			try_files $uri $uri/ /index.php?$args;
 			
 			#discuz origin rewrite
